crates/ruma-events/tests/it/ui/03-invalid-event-type.stderr
error: no event type attribute found, add `#[ruma_event(type = "any.room.event", kind = Kind)]` below the event content derive
 --> tests/it/ui/03-invalid-event-type.rs:6:48
  |
6 | #[derive(Clone, Debug, Deserialize, Serialize, EventContent)]
  |                                                ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `EventContent` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected one of: `type`, `kind`, `custom_redacted`, `custom_possibly_redacted`, `state_key_type`, `unsigned_type`, `alias`, `without_relation`
  --> tests/it/ui/03-invalid-event-type.rs:13:14
   |
13 | #[ruma_event(event = "m.macro.test", kind = State)]
   |              ^^^^^

error: cannot find attribute `not_ruma_event` in this scope
 --> tests/it/ui/03-invalid-event-type.rs:7:3
  |
7 | #[not_ruma_event(type = "m.macro.test", kind = State)]
  |   ^^^^^^^^^^^^^^ help: a derive helper attribute with a similar name exists: `ruma_event`
